tests/should_fail/let_destructure_list_on_tuple.nv
module test
// let list destructure on non-list type
let [a, b] = (1, 2)
